<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/ScoreText"
        android:layout_width="203dp"
        android:layout_height="49dp"
        android:text="@string/score_text"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="200dp" />

    <Button
        android:id="@+id/ButtonScore"
        android:layout_width="116dp"
        android:layout_height="51dp"
        android:text="@string/score_button_text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="500dp"
        android:layout_marginStart="30dp" />

    <Button
        android:id="@+id/ButtonSteal"
        android:layout_width="116dp"
        android:layout_height="51dp"
        android:text="@string/steal_button_text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="500dp"
        android:layout_marginStart="150dp" />

    <Button
        android:id="@+id/ButtonReset"
        android:layout_width="116dp"
        android:layout_height="51dp"
        android:text="@string/reset_button_text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="500dp"
        android:layout_marginStart="270dp" />

</androidx.constraintlayout.widget.ConstraintLayout>